feat(yml): test influxdb feat

--- a/.github/workflows/on-dispatch-tests.yml
+++ b/.github/workflows/on-dispatch-tests.yml
@@ -215,14 +215,18 @@ jobs:
           echo "=== AFTER CLEANING ==="
           cat -v metrics.influx
 
+          echo "=== FINAL PRINTF CHECK (NO TRAILING NEWLINES EXPECTED) ==="
+          printf "%s" "$(cat metrics.influx)" | cat -v
+
           # Push to InfluxDB Cloud
           WRITE_URL="${INFLUX_URL%/}/api/v2/write?org=${INFLUX_ORG}&bucket=${INFLUX_BUCKET}&precision=s"
 
-          HTTP_CODE=$(curl -s -o /tmp/influx_resp.txt -w "%{http_code}" \
-            -H "Authorization: Token ${INFLUX_TOKEN}" \
-            -H "Content-Type: text/plain; charset=utf-8" \
-            --data-binary "$(cat metrics.influx)" \
-            "${WRITE_URL}" || true)
+          HTTP_CODE=$(printf "%s" "$(cat metrics.influx)" \
+            | curl -s -o /tmp/influx_resp.txt -w "%{http_code}" \
+              -H "Authorization: Token ${INFLUX_TOKEN}" \
+              -H "Content-Type: text/plain; charset=utf-8" \
+              --data-binary @- \
+              "${WRITE_URL}" || true)
 
           echo "InfluxDB push HTTP code: ${HTTP_CODE}"
           echo "Response body:"
