--- a/.github/workflows/on-dispatch-tests.yml
+++ b/.github/workflows/on-dispatch-tests.yml
@@ -138,98 +138,13 @@ jobs:
           path: target/allure-single
 
       # # ---------- Push summary metrics to InfluxDB Cloud ----------
-      # - name: Push test metrics to InfluxDB Cloud
-      #   if: ${{ always() }}
-      #   env:
-      #     INFLUX_URL: ${{ secrets.INFLUX_URL }}
-      #     INFLUX_ORG: ${{ secrets.INFLUX_ORG }}
-      #     INFLUX_BUCKET: ${{ secrets.INFLUX_BUCKET }}
-      #     INFLUX_TOKEN: ${{ secrets.INFLUX_TOKEN }}
-      #     PROJECT_NAME: ${{ env.PROJECT_NAME }}
-      #     ENVIRONMENT: ${{ env.ENV }}
-      #     BRANCH_NAME: ${{ github.ref_name }}
-      #   shell: bash
-      #   run: |
-      #     set -euo pipefail
-
-      #     # Skip if InfluxDB secrets are not configured
-      #     if [ -z "${INFLUX_URL:-}" ] || [ -z "${INFLUX_ORG:-}" ] || [ -z "${INFLUX_BUCKET:-}" ] || [ -z "${INFLUX_TOKEN:-}" ]; then
-      #       echo "InfluxDB URL / org / bucket / token not set. Skipping metrics push."
-      #       exit 0
-      #     fi
-
-      #     # Ensure jq is available
-      #     if ! command -v jq >/dev/null 2>&1; then
-      #       sudo apt-get update
-      #       sudo apt-get install -y jq
-      #     fi
-
-      #     # Check Allure summary
-      #     if [ ! -f "allure-report/widgets/summary.json" ]; then
-      #       echo "Allure summary.json not found. Skipping metrics push."
-      #       exit 0
-      #     fi
-
-      #     # Extract metrics
-      #     PASSED=$(jq -r '.statistic.passed  // 0'   allure-report/widgets/summary.json)
-      #     FAILED=$(jq -r '.statistic.failed  // 0'   allure-report/widgets/summary.json)
-      #     BROKEN=$(jq -r '.statistic.broken  // 0'   allure-report/widgets/summary.json)
-      #     SKIPPED=$(jq -r '.statistic.skipped // 0'  allure-report/widgets/summary.json)
-      #     UNKNOWN=$(jq -r '.statistic.unknown // 0'  allure-report/widgets/summary.json)
-      #     TOTAL=$(jq -r '
-      #       if (.statistic.total? // null) != null
-      #       then .statistic.total
-      #       else (.statistic.passed // 0) + (.statistic.failed // 0) +
-      #           (.statistic.broken // 0) + (.statistic.skipped // 0) +
-      #           (.statistic.unknown // 0)
-      #       end
-      #     ' allure-report/widgets/summary.json)
-      #     DURATION_MS=$(jq -r '.time.duration // 0' allure-report/widgets/summary.json)
-
-      #     PASS_RATE=0
-      #     if [ "$TOTAL" -gt 0 ]; then
-      #       PASS_RATE=$(awk "BEGIN {printf \"%.2f\", ($PASSED*100)/$TOTAL}")
-      #       PASS_RATE="${PASS_RATE//,/\.}"  # ensure dot as decimal separator
-      #     fi
-
-      #     echo "Parsed metrics -> total=$TOTAL passed=$PASSED failed=$FAILED broken=$BROKEN skipped=$SKIPPED unknown=$UNKNOWN duration_ms=$DURATION_MS pass_rate=$PASS_RATE"
-
-      #     # Build Influx line protocol
-      #     LINE="automation_tests,project=${PROJECT_NAME},env=${ENVIRONMENT},branch=${BRANCH_NAME} total=${TOTAL}i,passed=${PASSED}i,failed=${FAILED}i,broken=${BROKEN}i,skipped=${SKIPPED}i,unknown=${UNKNOWN}i,duration_ms=${DURATION_MS}i,pass_rate=${PASS_RATE}"
-
-      #     # Clean line protocol: remove \r, trailing spaces, and ensure a single newline at the end
-      #     echo "$LINE" | tr -d '\r' | sed 's/[ \t]*$//' > metrics.influx
-      #     echo "" >> metrics.influx  # append newline
-
-      #     echo "=== FINAL LINE PROTOCOL ==="
-      #     cat -v metrics.influx
-
-      #     # Push to InfluxDB
-      #     WRITE_URL="${INFLUX_URL%/}/api/v2/write?org=${INFLUX_ORG}&bucket=${INFLUX_BUCKET}&precision=s"
-
-      #     HTTP_CODE=$(curl -s -o /tmp/influx_resp.txt -w "%{http_code}" \
-      #       -H "Authorization: Token ${INFLUX_TOKEN}" \
-      #       -H "Content-Type: text/plain; charset=utf-8" \
-      #       --data-binary @metrics.influx \
-      #       "${WRITE_URL}" || true)
-
-      #     echo "InfluxDB push HTTP code: ${HTTP_CODE}"
-      #     echo "Response body:"
-      #     cat /tmp/influx_resp.txt || echo "(empty)"
-
-      #     if [ "${HTTP_CODE}" -ge 200 ] && [ "${HTTP_CODE}" -lt 300 ]; then
-      #       echo "✅ Successfully pushed automation metrics to InfluxDB Cloud"
-      #     else
-      #       echo "⚠️ Failed to push metrics to InfluxDB Cloud (not failing the job)."
-      #     fi
-
-      # ---------- Push summary metrics to Grafana  ----------
-      - name: Push test metrics to Grafana Prometheus
+      - name: Push test metrics to InfluxDB Cloud
         if: ${{ always() }}
         env:
-          GRAFANA_PROM_URL: ${{ secrets.GRAFANA_PROM_URL }}
-          GRAFANA_PROM_USER: ${{ secrets.GRAFANA_PROM_USER }}
-          GRAFANA_PROM_API_KEY: ${{ secrets.GRAFANA_PROM_API_KEY }}
+          INFLUX_URL: ${{ secrets.INFLUX_URL }}
+          INFLUX_ORG: ${{ secrets.INFLUX_ORG }}
+          INFLUX_BUCKET: ${{ secrets.INFLUX_BUCKET }}
+          INFLUX_TOKEN: ${{ secrets.INFLUX_TOKEN }}
           PROJECT_NAME: ${{ env.PROJECT_NAME }}
           ENVIRONMENT: ${{ env.ENV }}
           BRANCH_NAME: ${{ github.ref_name }}
@@ -237,9 +152,9 @@ jobs:
         run: |
           set -euo pipefail
 
-          # Skip if Grafana/Influx secrets are not configured
-          if [ -z "${GRAFANA_PROM_URL:-}" ] || [ -z "${GRAFANA_PROM_USER:-}" ] || [ -z "${GRAFANA_PROM_API_KEY:-}" ]; then
-            echo "Grafana Influx URL / credentials not set. Skipping metrics push."
+          # Skip if InfluxDB secrets are not configured
+          if [ -z "${INFLUX_URL:-}" ] || [ -z "${INFLUX_ORG:-}" ] || [ -z "${INFLUX_BUCKET:-}" ] || [ -z "${INFLUX_TOKEN:-}" ]; then
+            echo "InfluxDB URL / org / bucket / token not set. Skipping metrics push."
             exit 0
           fi
 
@@ -249,11 +164,13 @@ jobs:
             sudo apt-get install -y jq
           fi
 
+          # Check Allure summary
           if [ ! -f "allure-report/widgets/summary.json" ]; then
             echo "Allure summary.json not found. Skipping metrics push."
             exit 0
           fi
 
+          # Extract metrics
           PASSED=$(jq -r '.statistic.passed  // 0'   allure-report/widgets/summary.json)
           FAILED=$(jq -r '.statistic.failed  // 0'   allure-report/widgets/summary.json)
           BROKEN=$(jq -r '.statistic.broken  // 0'   allure-report/widgets/summary.json)
@@ -263,8 +180,8 @@ jobs:
             if (.statistic.total? // null) != null
             then .statistic.total
             else (.statistic.passed // 0) + (.statistic.failed // 0) +
-                 (.statistic.broken // 0) + (.statistic.skipped // 0) +
-                 (.statistic.unknown // 0)
+                (.statistic.broken // 0) + (.statistic.skipped // 0) +
+                (.statistic.unknown // 0)
             end
           ' allure-report/widgets/summary.json)
           DURATION_MS=$(jq -r '.time.duration // 0' allure-report/widgets/summary.json)
@@ -272,32 +189,115 @@ jobs:
           PASS_RATE=0
           if [ "$TOTAL" -gt 0 ]; then
             PASS_RATE=$(awk "BEGIN {printf \"%.2f\", ($PASSED*100)/$TOTAL}")
+            PASS_RATE="${PASS_RATE//,/\.}"  # ensure dot as decimal separator
           fi
 
           echo "Parsed metrics -> total=$TOTAL passed=$PASSED failed=$FAILED broken=$BROKEN skipped=$SKIPPED unknown=$UNKNOWN duration_ms=$DURATION_MS pass_rate=$PASS_RATE"
 
-          # Build Influx line protocol:
-          # measurement: automation_tests
-          # tags: project, env, branch
-          # fields: totals, duration_ms, pass_rate
+          # Build Influx line protocol
           LINE="automation_tests,project=${PROJECT_NAME},env=${ENVIRONMENT},branch=${BRANCH_NAME} total=${TOTAL}i,passed=${PASSED}i,failed=${FAILED}i,broken=${BROKEN}i,skipped=${SKIPPED}i,unknown=${UNKNOWN}i,duration_ms=${DURATION_MS}i,pass_rate=${PASS_RATE}"
 
-          echo "Generated metrics.influx:"
-          echo "${LINE}" > metrics.influx
-          cat metrics.influx
+          # Clean line protocol: remove \r, trailing spaces, and ensure a single newline at the end
+          echo "$LINE" | tr -d '\r' | sed 's/[ \t]*$//' > metrics.influx
+          echo "" >> metrics.influx  # append newline
+
+          echo "=== FINAL LINE PROTOCOL ==="
+          cat -v metrics.influx
+
+          # Push to InfluxDB
+          WRITE_URL="${INFLUX_URL%/}/api/v2/write?org=${INFLUX_ORG}&bucket=${INFLUX_BUCKET}&precision=s"
 
           HTTP_CODE=$(curl -s -o /tmp/influx_resp.txt -w "%{http_code}" \
-            -u "${GRAFANA_PROM_USER}:${GRAFANA_PROM_API_KEY}" \
-            -H "Content-Type: text/plain" \
+            -H "Authorization: Token ${INFLUX_TOKEN}" \
+            -H "Content-Type: text/plain; charset=utf-8" \
             --data-binary @metrics.influx \
-            "${GRAFANA_PROM_URL}" || true)
+            "${WRITE_URL}" || true)
 
-          echo "Influx push HTTP code: ${HTTP_CODE}"
+          echo "InfluxDB push HTTP code: ${HTTP_CODE}"
           echo "Response body:"
           cat /tmp/influx_resp.txt || echo "(empty)"
 
           if [ "${HTTP_CODE}" -ge 200 ] && [ "${HTTP_CODE}" -lt 300 ]; then
-            echo "✅ Successfully pushed automation metrics to Grafana Cloud (Influx endpoint)"
+            echo "✅ Successfully pushed automation metrics to InfluxDB Cloud"
           else
-            echo "⚠️ Failed to push metrics to Grafana Cloud (not failing the job)."
+            echo "⚠️ Failed to push metrics to InfluxDB Cloud (not failing the job)."
           fi
+
+      # ---------- Push summary metrics to Grafana  ----------
+      # - name: Push test metrics to Grafana Prometheus
+      #   if: ${{ always() }}
+      #   env:
+      #     GRAFANA_PROM_URL: ${{ secrets.GRAFANA_PROM_URL }}
+      #     GRAFANA_PROM_USER: ${{ secrets.GRAFANA_PROM_USER }}
+      #     GRAFANA_PROM_API_KEY: ${{ secrets.GRAFANA_PROM_API_KEY }}
+      #     PROJECT_NAME: ${{ env.PROJECT_NAME }}
+      #     ENVIRONMENT: ${{ env.ENV }}
+      #     BRANCH_NAME: ${{ github.ref_name }}
+      #   shell: bash
+      #   run: |
+      #     set -euo pipefail
+
+      #     # Skip if Grafana/Influx secrets are not configured
+      #     if [ -z "${GRAFANA_PROM_URL:-}" ] || [ -z "${GRAFANA_PROM_USER:-}" ] || [ -z "${GRAFANA_PROM_API_KEY:-}" ]; then
+      #       echo "Grafana Influx URL / credentials not set. Skipping metrics push."
+      #       exit 0
+      #     fi
+
+      #     # Ensure jq is available
+      #     if ! command -v jq >/dev/null 2>&1; then
+      #       sudo apt-get update
+      #       sudo apt-get install -y jq
+      #     fi
+
+      #     if [ ! -f "allure-report/widgets/summary.json" ]; then
+      #       echo "Allure summary.json not found. Skipping metrics push."
+      #       exit 0
+      #     fi
+
+      #     PASSED=$(jq -r '.statistic.passed  // 0'   allure-report/widgets/summary.json)
+      #     FAILED=$(jq -r '.statistic.failed  // 0'   allure-report/widgets/summary.json)
+      #     BROKEN=$(jq -r '.statistic.broken  // 0'   allure-report/widgets/summary.json)
+      #     SKIPPED=$(jq -r '.statistic.skipped // 0'  allure-report/widgets/summary.json)
+      #     UNKNOWN=$(jq -r '.statistic.unknown // 0'  allure-report/widgets/summary.json)
+      #     TOTAL=$(jq -r '
+      #       if (.statistic.total? // null) != null
+      #       then .statistic.total
+      #       else (.statistic.passed // 0) + (.statistic.failed // 0) +
+      #            (.statistic.broken // 0) + (.statistic.skipped // 0) +
+      #            (.statistic.unknown // 0)
+      #       end
+      #     ' allure-report/widgets/summary.json)
+      #     DURATION_MS=$(jq -r '.time.duration // 0' allure-report/widgets/summary.json)
+
+      #     PASS_RATE=0
+      #     if [ "$TOTAL" -gt 0 ]; then
+      #       PASS_RATE=$(awk "BEGIN {printf \"%.2f\", ($PASSED*100)/$TOTAL}")
+      #     fi
+
+      #     echo "Parsed metrics -> total=$TOTAL passed=$PASSED failed=$FAILED broken=$BROKEN skipped=$SKIPPED unknown=$UNKNOWN duration_ms=$DURATION_MS pass_rate=$PASS_RATE"
+
+      #     # Build Influx line protocol:
+      #     # measurement: automation_tests
+      #     # tags: project, env, branch
+      #     # fields: totals, duration_ms, pass_rate
+      #     LINE="automation_tests,project=${PROJECT_NAME},env=${ENVIRONMENT},branch=${BRANCH_NAME} total=${TOTAL}i,passed=${PASSED}i,failed=${FAILED}i,broken=${BROKEN}i,skipped=${SKIPPED}i,unknown=${UNKNOWN}i,duration_ms=${DURATION_MS}i,pass_rate=${PASS_RATE}"
+
+      #     echo "Generated metrics.influx:"
+      #     echo "${LINE}" > metrics.influx
+      #     cat metrics.influx
+
+      #     HTTP_CODE=$(curl -s -o /tmp/influx_resp.txt -w "%{http_code}" \
+      #       -u "${GRAFANA_PROM_USER}:${GRAFANA_PROM_API_KEY}" \
+      #       -H "Content-Type: text/plain" \
+      #       --data-binary @metrics.influx \
+      #       "${GRAFANA_PROM_URL}" || true)
+
+      #     echo "Influx push HTTP code: ${HTTP_CODE}"
+      #     echo "Response body:"
+      #     cat /tmp/influx_resp.txt || echo "(empty)"
+
+      #     if [ "${HTTP_CODE}" -ge 200 ] && [ "${HTTP_CODE}" -lt 300 ]; then
+      #       echo "✅ Successfully pushed automation metrics to Grafana Cloud (Influx endpoint)"
+      #     else
+      #       echo "⚠️ Failed to push metrics to Grafana Cloud (not failing the job)."
+      #     fi
