--- a/.github/workflows/on-dispatch-tests.yml
+++ b/.github/workflows/on-dispatch-tests.yml
@@ -139,89 +139,89 @@ jobs:
 
       # # ---------- Push summary metrics to InfluxDB Cloud ----------
       # - name: Push test metrics to InfluxDB Cloud
-        if: ${{ always() }}
-        env:
-          INFLUX_URL: ${{ secrets.INFLUX_URL }}
-          INFLUX_ORG: ${{ secrets.INFLUX_ORG }}
-          INFLUX_BUCKET: ${{ secrets.INFLUX_BUCKET }}
-          INFLUX_TOKEN: ${{ secrets.INFLUX_TOKEN }}
-          PROJECT_NAME: ${{ env.PROJECT_NAME }}
-          ENVIRONMENT: ${{ env.ENV }}
-          BRANCH_NAME: ${{ github.ref_name }}
-        shell: bash
-        run: |
-          set -euo pipefail
+        # if: ${{ always() }}
+        # env:
+        #   INFLUX_URL: ${{ secrets.INFLUX_URL }}
+        #   INFLUX_ORG: ${{ secrets.INFLUX_ORG }}
+        #   INFLUX_BUCKET: ${{ secrets.INFLUX_BUCKET }}
+        #   INFLUX_TOKEN: ${{ secrets.INFLUX_TOKEN }}
+        #   PROJECT_NAME: ${{ env.PROJECT_NAME }}
+        #   ENVIRONMENT: ${{ env.ENV }}
+        #   BRANCH_NAME: ${{ github.ref_name }}
+        # shell: bash
+        # run: |
+        #   set -euo pipefail
 
-          # Skip if InfluxDB secrets are not configured
-          if [ -z "${INFLUX_URL:-}" ] || [ -z "${INFLUX_ORG:-}" ] || [ -z "${INFLUX_BUCKET:-}" ] || [ -z "${INFLUX_TOKEN:-}" ]; then
-            echo "InfluxDB URL / org / bucket / token not set. Skipping metrics push."
-            exit 0
-          fi
+        #   # Skip if InfluxDB secrets are not configured
+        #   if [ -z "${INFLUX_URL:-}" ] || [ -z "${INFLUX_ORG:-}" ] || [ -z "${INFLUX_BUCKET:-}" ] || [ -z "${INFLUX_TOKEN:-}" ]; then
+        #     echo "InfluxDB URL / org / bucket / token not set. Skipping metrics push."
+        #     exit 0
+        #   fi
 
-          # Ensure jq is available
-          if ! command -v jq >/dev/null 2>&1; then
-            sudo apt-get update
-            sudo apt-get install -y jq
-          fi
+        #   # Ensure jq is available
+        #   if ! command -v jq >/dev/null 2>&1; then
+        #     sudo apt-get update
+        #     sudo apt-get install -y jq
+        #   fi
 
-          # Check Allure summary
-          if [ ! -f "allure-report/widgets/summary.json" ]; then
-            echo "Allure summary.json not found. Skipping metrics push."
-            exit 0
-          fi
+        #   # Check Allure summary
+        #   if [ ! -f "allure-report/widgets/summary.json" ]; then
+        #     echo "Allure summary.json not found. Skipping metrics push."
+        #     exit 0
+        #   fi
 
-          # Extract metrics
-          PASSED=$(jq -r '.statistic.passed  // 0'   allure-report/widgets/summary.json)
-          FAILED=$(jq -r '.statistic.failed  // 0'   allure-report/widgets/summary.json)
-          BROKEN=$(jq -r '.statistic.broken  // 0'   allure-report/widgets/summary.json)
-          SKIPPED=$(jq -r '.statistic.skipped // 0'  allure-report/widgets/summary.json)
-          UNKNOWN=$(jq -r '.statistic.unknown // 0'  allure-report/widgets/summary.json)
-          TOTAL=$(jq -r '
-            if (.statistic.total? // null) != null
-            then .statistic.total
-            else (.statistic.passed // 0) + (.statistic.failed // 0) +
-                (.statistic.broken // 0) + (.statistic.skipped // 0) +
-                (.statistic.unknown // 0)
-            end
-          ' allure-report/widgets/summary.json)
-          DURATION_MS=$(jq -r '.time.duration // 0' allure-report/widgets/summary.json)
+        #   # Extract metrics
+        #   PASSED=$(jq -r '.statistic.passed  // 0'   allure-report/widgets/summary.json)
+        #   FAILED=$(jq -r '.statistic.failed  // 0'   allure-report/widgets/summary.json)
+        #   BROKEN=$(jq -r '.statistic.broken  // 0'   allure-report/widgets/summary.json)
+        #   SKIPPED=$(jq -r '.statistic.skipped // 0'  allure-report/widgets/summary.json)
+        #   UNKNOWN=$(jq -r '.statistic.unknown // 0'  allure-report/widgets/summary.json)
+        #   TOTAL=$(jq -r '
+        #     if (.statistic.total? // null) != null
+        #     then .statistic.total
+        #     else (.statistic.passed // 0) + (.statistic.failed // 0) +
+        #         (.statistic.broken // 0) + (.statistic.skipped // 0) +
+        #         (.statistic.unknown // 0)
+        #     end
+        #   ' allure-report/widgets/summary.json)
+        #   DURATION_MS=$(jq -r '.time.duration // 0' allure-report/widgets/summary.json)
 
-          PASS_RATE=0
-          if [ "$TOTAL" -gt 0 ]; then
-            PASS_RATE=$(awk "BEGIN {printf \"%.2f\", ($PASSED*100)/$TOTAL}")
-            PASS_RATE="${PASS_RATE//,/\.}"  # ensure dot as decimal separator
-          fi
+        #   PASS_RATE=0
+        #   if [ "$TOTAL" -gt 0 ]; then
+        #     PASS_RATE=$(awk "BEGIN {printf \"%.2f\", ($PASSED*100)/$TOTAL}")
+        #     PASS_RATE="${PASS_RATE//,/\.}"  # ensure dot as decimal separator
+        #   fi
 
-          echo "Parsed metrics -> total=$TOTAL passed=$PASSED failed=$FAILED broken=$BROKEN skipped=$SKIPPED unknown=$UNKNOWN duration_ms=$DURATION_MS pass_rate=$PASS_RATE"
+        #   echo "Parsed metrics -> total=$TOTAL passed=$PASSED failed=$FAILED broken=$BROKEN skipped=$SKIPPED unknown=$UNKNOWN duration_ms=$DURATION_MS pass_rate=$PASS_RATE"
 
-          # Build Influx line protocol
-          LINE="automation_tests,project=${PROJECT_NAME},env=${ENVIRONMENT},branch=${BRANCH_NAME} total=${TOTAL}i,passed=${PASSED}i,failed=${FAILED}i,broken=${BROKEN}i,skipped=${SKIPPED}i,unknown=${UNKNOWN}i,duration_ms=${DURATION_MS}i,pass_rate=${PASS_RATE}"
+        #   # Build Influx line protocol
+        #   LINE="automation_tests,project=${PROJECT_NAME},env=${ENVIRONMENT},branch=${BRANCH_NAME} total=${TOTAL}i,passed=${PASSED}i,failed=${FAILED}i,broken=${BROKEN}i,skipped=${SKIPPED}i,unknown=${UNKNOWN}i,duration_ms=${DURATION_MS}i,pass_rate=${PASS_RATE}"
 
-          # Clean line protocol: remove \r, trailing spaces, and ensure a single newline at the end
-          echo "$LINE" | tr -d '\r' | sed 's/[ \t]*$//' > metrics.influx
-          echo "" >> metrics.influx  # append newline
+        #   # Clean line protocol: remove \r, trailing spaces, and ensure a single newline at the end
+        #   echo "$LINE" | tr -d '\r' | sed 's/[ \t]*$//' > metrics.influx
+        #   echo "" >> metrics.influx  # append newline
 
-          echo "=== FINAL LINE PROTOCOL ==="
-          cat -v metrics.influx
+        #   echo "=== FINAL LINE PROTOCOL ==="
+        #   cat -v metrics.influx
 
-          # Push to InfluxDB
-          WRITE_URL="${INFLUX_URL%/}/api/v2/write?org=${INFLUX_ORG}&bucket=${INFLUX_BUCKET}&precision=s"
+        #   # Push to InfluxDB
+        #   WRITE_URL="${INFLUX_URL%/}/api/v2/write?org=${INFLUX_ORG}&bucket=${INFLUX_BUCKET}&precision=s"
 
-          HTTP_CODE=$(curl -s -o /tmp/influx_resp.txt -w "%{http_code}" \
-            -H "Authorization: Token ${INFLUX_TOKEN}" \
-            -H "Content-Type: text/plain; charset=utf-8" \
-            --data-binary @metrics.influx \
-            "${WRITE_URL}" || true)
+        #   HTTP_CODE=$(curl -s -o /tmp/influx_resp.txt -w "%{http_code}" \
+        #     -H "Authorization: Token ${INFLUX_TOKEN}" \
+        #     -H "Content-Type: text/plain; charset=utf-8" \
+        #     --data-binary @metrics.influx \
+        #     "${WRITE_URL}" || true)
 
-          echo "InfluxDB push HTTP code: ${HTTP_CODE}"
-          echo "Response body:"
-          cat /tmp/influx_resp.txt || echo "(empty)"
+        #   echo "InfluxDB push HTTP code: ${HTTP_CODE}"
+        #   echo "Response body:"
+        #   cat /tmp/influx_resp.txt || echo "(empty)"
 
-          if [ "${HTTP_CODE}" -ge 200 ] && [ "${HTTP_CODE}" -lt 300 ]; then
-            echo "✅ Successfully pushed automation metrics to InfluxDB Cloud"
-          else
-            echo "⚠️ Failed to push metrics to InfluxDB Cloud (not failing the job)."
-          fi
+        #   if [ "${HTTP_CODE}" -ge 200 ] && [ "${HTTP_CODE}" -lt 300 ]; then
+        #     echo "✅ Successfully pushed automation metrics to InfluxDB Cloud"
+        #   else
+        #     echo "⚠️ Failed to push metrics to InfluxDB Cloud (not failing the job)."
+        #   fi
 
       # ---------- Push summary metrics to Grafana  ----------
       - name: Push test metrics to Grafana Prometheus
