--- a/.github/workflows/on-dispatch-tests.yml
+++ b/.github/workflows/on-dispatch-tests.yml
@@ -125,6 +125,17 @@ jobs:
             print "{\"@timestamp\":\""strftime("%Y-%m-%dT%H:%M:%SZ")"\",\"message\":\""$0"\"}";
           }' logs_input/combined.log > out/logs.ndjson
 
+      - name: Convert logs to NDJSON for Elasticsearch
+        if: ${{ always() }}
+        run: |
+          mkdir -p out
+          awk '{
+            gsub(/"/, "\\\"");
+            print "{\"index\":{\"_index\":\"automation-logs\"}}";
+            print "{\"@timestamp\":\""strftime("%Y-%m-%dT%H:%M:%SZ")"\",\"message\":\""$0"\"}";
+          }' logs_input/combined.log > out/logs.ndjson
+
+
       - name: Push logs to Elasticsearch
         if: ${{ always() }}
         env:
