--- a/.github/workflows/on-dispatch-tests.yml
+++ b/.github/workflows/on-dispatch-tests.yml
@@ -107,12 +107,16 @@ jobs:
           echo "Combined log created:"
           ls -lh out/combined.log
 
-      - name: Convert combined log to NDJSON
+      - name: Convert combined log to NDJSON (Bulk format)
         run: |
-          awk '{
-            gsub(/"/, "\\\"", $0);
-            printf("{\"message\":\"%s\"}\n", $0);
-          }' out/combined.log > out/logs.ndjson
+          INDEX_NAME="calculator-logs"
+          > out/logs.ndjson
+
+          while IFS= read -r line; do
+            ESCAPED=$(printf '%s' "$line" | sed 's/"/\\"/g')
+            printf '{"index":{"_index":"%s"}}\n' "$INDEX_NAME" >> out/logs.ndjson
+            printf '{"message":"%s"}\n' "$ESCAPED" >> out/logs.ndjson
+          done < out/combined.log
 
       - name: Upload to Elasticsearch
         env:
@@ -120,13 +124,21 @@ jobs:
           ELASTIC_USERNAME: ${{ secrets.ELASTIC_USERNAME }}
           ELASTIC_PASSWORD: ${{ secrets.ELASTIC_PASSWORD }}
         run: |
-          curl -X POST "$ELASTIC_URL/_bulk" \
+          RESPONSE=$(curl -s -o response.json -w "%{http_code}" \
+            -X POST "$ELASTIC_URL/_bulk" \
             -H "Content-Type: application/x-ndjson" \
             --user "$ELASTIC_USERNAME:$ELASTIC_PASSWORD" \
-            --data-binary @out/logs.ndjson
+            --data-binary @out/logs.ndjson)
 
-      - name: Done
-        run: echo "Logs successfully pushed to Elasticsearch"
+          echo "HTTP response: $RESPONSE"
+
+          if [ "$RESPONSE" -ge 200 ] && [ "$RESPONSE" -lt 300 ]; then
+            echo "Logs successfully pushed to Elasticsearch"
+          else
+            echo "Failed to push logs. Printing Elasticsearch response:"
+            cat response.json
+            exit 1
+          fi
 
       # ---------- Reports & artifacts ----------
       - name: Upload raw test reports (Surefire/Cucumber/Allure results)
