--- a/.github/workflows/on-dispatch-tests.yml
+++ b/.github/workflows/on-dispatch-tests.yml
@@ -51,6 +51,40 @@ jobs:
                 -d "{\"message\": \"$line\", \"timestamp\": \"$(date -u +"%Y-%m-%dT%H:%M:%SZ")\"}"
             done < "$LOG_FILE"
 
+      - name: Convert combined log to NDJSON (Bulk format)
+        run: |
+          INDEX_NAME="calculator-logs"
+          > out/logs.ndjson
+
+          while IFS= read -r line; do
+
+            # Extract timestamp from start of log line
+            RAW_TS=$(echo "$line" | awk '{print $1 " " $2}')
+
+            # Escape quotes in log line
+            ESCAPED=$(printf '%s' "$line" | sed 's/"/\\"/g')
+
+            printf '{"index":{"_index":"%s"}}\n' "$INDEX_NAME" >> out/logs.ndjson
+            printf '{ "raw_timestamp":"%s", "message":"%s" }\n' "$RAW_TS" "$ESCAPED" >> out/logs.ndjson
+
+          done < out/combined.log
+
+      - name: Upload to Elasticsearch (with pipeline)
+        env:
+          ELASTIC_URL: ${{ secrets.ELASTIC_URL }}
+          ELASTIC_USERNAME: ${{ secrets.ELASTIC_USERNAME }}
+          ELASTIC_PASSWORD: ${{ secrets.ELASTIC_PASSWORD }}
+        run: |
+          RESPONSE=$(curl -s -o response.json -w "%{http_code}" \
+            -X POST "$ELASTIC_URL/_bulk?pipeline=calculator-log-pipeline" \
+            -H "Content-Type: application/x-ndjson" \
+            --user "$ELASTIC_USERNAME:$ELASTIC_PASSWORD" \
+            --data-binary @out/logs.ndjson)
+
+          echo "HTTP response: $RESPONSE"
+
+          if [ "$RESPONSE" -ge 200 ] && [ "$RESPONSE" -lt 300 ]; then
+            echo "Logs successfully pushed to Elasticsearch using pipeline"
           else
             echo "Log file not found: $LOG_FILE"
           fi
